@@ -1,6 +1,15 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.717 2010-03-11 14:27:14 remko Exp $
+	$Id: ChangeLog,v 1.718 2010-03-15 19:41:24 guru Exp $
 -----------------------------------------------------------------------------------------
+
+2010-03-15	pwessel
+	* gmt_io.c:		Added GMT_io.skip_duplicates [FALSE] to control if consecutive
+				records with identical x,y should be skipped.  This is needed
+				by programs that uses GMT_sph_inonout, which does not expect to
+				find duplicates vertices.
+	* gmtselect.c:		Turns skip_duplicates on before reading polygons
+	* grdmask.c:		Turns skip_duplicates on before reading polygons
+	* grdmath.c:		Turns skip_duplicates on before reading polygons
 
 2010-03-11	remko
 	* ps2raster.c:		End matter did not get parsed when there is no %%Orientation.
